[package]
name = "engine"
version = "0.1.0-dev"
description = "The backbone of Praesidium"
authors = ["Germán (@itsgerliz)"]
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
